# Recovery

./: build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native_scanner.cpp
app/src/main/cpp/filesystem/: ext4_scanner.cpp  ext4_scanner.h  f2fs_scanner.cpp  f2fs_scanner.h  fat32_scanner.cpp  fat32_scanner.h
app/src/main/cpp/include/: native_scanner.h
app/src/main/cpp/recovery/: file_carver.cpp  file_carver.h  signature_detector.cpp  signature_detector.h
app/src/main/cpp/utils/: disk_utils.cpp  disk_utils.h  root_utils.cpp  root_utils.h
app/src/main/java/com/datarescue/pro/: DataRescueApplication.kt
app/src/main/java/com/datarescue/pro/data/native/: NativeFileScanner.kt
app/src/main/java/com/datarescue/pro/data/repository/: AdvancedFileRecoveryRepository.kt  DeviceInfoRepository.kt  FileRecoveryRepositoryImpl.kt
app/src/main/java/com/datarescue/pro/di/: AppModule.kt
app/src/main/java/com/datarescue/pro/domain/model/: DeviceInfo.kt  RecoverableFile.kt
app/src/main/java/com/datarescue/pro/domain/repository/: FileRecoveryRepository.kt
app/src/main/java/com/datarescue/pro/domain/usecase/: FileRecoveryUseCase.kt
app/src/main/java/com/datarescue/pro/presentation/: MainActivity.kt
app/src/main/java/com/datarescue/pro/presentation/navigation/: Navigation.kt
app/src/main/java/com/datarescue/pro/presentation/viewmodel/: DeviceInfoViewModel.kt  (+3 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+9 files in other folders)
